data/all_generated_tests/raw_wast_tests/br_if_IncorrectConditionEvaluation_1694.wast
;; 5. **Test Unwinding with Incorrect Operand Stack Height**:    - **Description**: When `br_if` branches, ensure that the operand stack height matches the required state.    - **Constraint**: The operand stack must reflect the types and order expected by the branch target after unwinding.    - **Incorrect Condition Evaluation**: The `br_if` encounters a stack height mismatch, leading to stack corruption or inaccurate condition evaluation.

(assert_invalid
  (module (func $unwind-stack-mismatch
    (block (result i32) 
      (i32.const 0) 
      (i32.const 1) 
      (br_if 0 (i32.const 1))
    )
  ))
  "type mismatch"
)